# amaru-js

./: .gitignore  Cargo.toml  Makefile  README.md  index.html  index.js  package-lock.json  package.json  webpack.config.js
.github/workflows/: CD.yml
lib/: Cargo.toml  package-lock.json  package.json
lib/src/: lib.rs  store.rs
ui/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.css  App.tsx  index.ts  main.tsx
ui/src/components/: block-viewer.tsx
